# assembly-theory

./: .gitignore  Cargo.toml
assets/: model-1.xml  model-2.xml  model-3.xml
src/: drawable.rs  main.rs  mjdata_bind.rs  model.rs  node.rs  painter.rs  physics_mj.rs  plugin.rs  rubiks.rs  splash-2.txt  splash-3.txt  splash.txt
src/plugin/: mod.rs  rubiks.rs  rubiks_solver.rs
